<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/mainBackground"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/mainBackground">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/app_name_uper"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/activity_chat_terms_intro"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/textView1"
                android:padding="10dp">

            <RelativeLayout
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <CheckBox
                    android:id="@+id/checkbox_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:visibility="visible"
                    android:checked="true"/>
                <TextView
                    android:id="@+id/termstxv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/checkbox_terms"
                    android:text="@string/activity_chat_terms_termsofservice"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <CheckBox
                    android:id="@+id/checkbox_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:visibility="visible"
                    android:checked="true"/>
                <TextView
                    android:id="@+id/privacytxv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/checkbox_privacy"
                    android:text="@string/activity_chat_terms_privacy"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <CheckBox
                    android:id="@+id/checkbox_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:visibility="visible"
                    android:checked="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/checkbox_age"
                    android:text="@string/activity_chat_terms_age"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/access"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <CheckBox
                    android:id="@+id/checkbox_access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:checked="true"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/checkbox_access"
                    android:text="@string/activity_chat_terms_access"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>



        </LinearLayout>
        <RelativeLayout
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nextBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <CheckBox
                android:id="@+id/checkbox_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                android:checked="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/checkbox_all"
                android:text="@string/activity_chat_terms_all"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </RelativeLayout>
        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chat_login_activity_chat_login_button_login_height"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttons"
            android:layout_alignParentBottom="true"
            android:text="@string/activity_chat_terms_next"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/chat_login_activity_chat_login_button_login_text_color" />


    </RelativeLayout>
    <WebView
        android:id="@+id/webView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</android.support.design.widget.CoordinatorLayout>