<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/mainBackground"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/mainBackground">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_uper"
            android:layout_toRightOf="@+id/app_logo"
            android:layout_centerVertical="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="02:55 Left"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </RelativeLayout>


    <TextView
        android:id="@+id/textViewemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_chat_resetpass_intro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_layout"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <RelativeLayout
        android:id="@+id/RR_email"
        android:layout_width="match_parent"
        android:layout_below="@+id/textViewemail"

        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:id="@+id/img_mail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:tint="@color/colorPrimary"

            android:src="@mipmap/login_mail"></ImageView>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/img_mail"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:hint="@string/chat_login_activity_chat_login_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:text=""
            android:textColor="#000"
            android:textSize="18dp" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/chat_progress_bar_size"
            android:layout_height="@dimen/chat_progress_bar_size"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

    </RelativeLayout>






    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttons"
        android:layout_alignParentBottom="true"
        android:text="@string/activity_chat_resetpass_resetpass"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/chat_login_activity_chat_login_button_login_text_color" />



</RelativeLayout>